# Cloud-Native-MapReduce-Framework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  build.sh  cmake_install.cmake  run.sh
docker/: Dockerfile.master  Dockerfile.worker
functions/: mapper.py  reducer.py
include/: HTTPRequest.hpp
lib/: libglog.so.1
protos/: sample.proto
src/: CMakeLists.txt  cmake_install.cmake
src/client/: CMakeLists.txt  client.cpp  cmake_install.cmake
src/master/: CMakeLists.txt  cmake_install.cmake  master.cpp
src/worker/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mapper.py  reducer.py  worker.cpp
yaml/: master-crash.yaml  master-deployment.yaml  master-service.yaml  worker-crash.yaml  worker-deployment.yaml  worker-service.yaml
